# AndroidVideoPlayer

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  YauFFmpeg.cpp  YauFFmpeg.h  native-lib.cpp
app/src/main/java/com/yau/videoplayer/: MainActivity.java
app/src/main/java/com/yau/videoplayer/player/: VideoPlayer.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
